WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55499
WebKitTestRunner can hang forever waiting for a crash log to be saved for the web process
https://bugs.webkit.org/show_bug.cgi?id=55499
Summary
WebKitTestRunner can hang forever waiting for a crash log to be saved for the...
Adam Roben (:aroben)
Reported
2011-03-01 13:21:03 PST
WebKitTestRunner can hang forever waiting for a crash log to be saved for the web process
Attachments
Patch
(5.78 KB, patch)
2011-03-01 13:21 PST
,
Adam Roben (:aroben)
sfalken
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-03-01 13:21:36 PST
Created
attachment 84284
[details]
Patch
Adam Roben (:aroben)
Comment 2
2011-03-01 13:31:23 PST
Committed
r80033
: <
http://trac.webkit.org/changeset/80033
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug